# svglib

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  MANIFEST.in  Makefile  README.html  README.md  README.rst  README.txt  appveyor.yml  appveyor_wait_for_other_jobs_complete.ps1  appveyor_wait_for_travis.ps1  metainfo.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sync_ci.py  tox.ini  travis_wait_for_appveyor.py  travis_wait_for_other_jobs_complete.ps1
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci-macos.yml  ci-ubuntu.yml  ci-windows-manual.yml  ci-windows.yml  ci.yml  codeql.yml  greetings.yml  publish-to-pypi.yml  publish-to-testpypi.yml  type-check.yml
demos/: README.rst  st_svg2pdf_app.mov  st_svg2pdf_app.py
scripts/: svg2pdf  svg2pdf.cmd  svg2pm  svg2ps
src/scripts/: svg2pdf
src/svglib/: __init__.py  fonts.py  svglib.py  utils.py
src/test/: README.rst  README.txt  test_basic.py  test_samples.py  test_svglib.py
svglib/: fonts.py  svglib.py  utils.py
svglib.egg-info/: PKG-INFO  SOURCES.txt
tests/: NOTES.html  NOTES.rst  README.rst  test_basic.py  test_fonts.py  test_samples.py  test_units.py  utils.py
tests/samples/misc/: Berlin_location_map_gz.svgz  LICENSES.rst
tests/samples/wikipedia/: README.rst
