[metadata]
name = svglib
version = 1.5.1
description = A pure-Python library for reading and converting SVG
long_description = file: README.rst
keywords =
    SVG
    PDF
    reportlab
    conversion
    graphics
url = https://github.com/deeplook/svglib
author = Dinu Gherman
author_email = gherman@darwin.in-berlin.de
license = LGPL 3
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation
    Topic :: Utilities
    Topic :: Printing
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: XML

[options]
python_requires = >=3.7
install_requires =
    reportlab
    lxml
    tinycss2>=1.1.0
    cssselect2>=0.5.0
tests_require =
    pytest
packages =
    svglib
package_dir =
    svglib = svglib
scripts =
    scripts/svg2pdf

[options.data_files]
share/man/man1 = svg2pdf.1

[aliases]
test = pytest

[flake8]
max-line-length = 99
